# acts

CI/fpe_masks/: requirements.txt
Core/include/Acts/AmbiguityResolution/: AthenaAmbiguityResolution.hpp  AthenaAmbiguityResolution.ipp  ScoreBasedAmbiguityResolution.hpp  ScoreBasedAmbiguityResolution.ipp
Core/include/Acts/EventData/: MultiTrajectoryHelpers.hpp
Core/src/AmbiguityResolution/: AthenaAmbiguityResolution.cpp  ScoreBasedAmbiguityResolution.cpp
Examples/Algorithms/AmbiguityResolution/: CMakeLists.txt
Examples/Algorithms/AmbiguityResolution/src/: AthenaAmbiguityResolution.cpp  AthenaAmbiguityResolutionAlgorithm.cpp  ScoreBasedAmbiguityResolutionAlgorithm.cpp
Examples/Io/Root/: CMakeLists.txt
Examples/Io/Root/src/: RootScoreMonitorWriter.cpp
Examples/Python/: CMakeLists.txt
Examples/Python/python/acts/examples/: reconstruction.py
Examples/Python/src/: AmbiguityResolution.cpp  AthenaAmbiguityResolution.cpp  ModuleEntry.cpp  RootOutput.cpp
Examples/Python/tests/: requirements.txt
Examples/Scripts/: CMakeLists.txt  requirements.txt
Examples/Scripts/AmbiScoreMonitor/: CMakeLists.txt  ScoreMonitorPlots.cpp
Examples/Scripts/Python/: full_chain_itk.py  full_chain_odd.py  full_chain_odd_athena_ambi.py
Plugins/Json/src/: AmbiguityConfigJsonConverter.cpp
Plugins/Root/src/: AmbiScoreMonitor.cpp
Tests/UnitTests/Core/: CMakeLists.txt
Tests/UnitTests/Core/AmbiguityResolution/: AthenaAmbiguityResolutionTest.cpp  ScoreBasedAmbiguityResolutionTest.cpp
codegen/src/codegen.egg-info/: PKG-INFO  SOURCES.txt
docs/: requirements.txt
(+6 files in other folders)
